website/versioned_docs/version-1.1.1/tutorials/early_stopping/index.mdx
---
title: Trial-level Early Stopping
sidebar_label: Trial-level Early Stopping
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/early_stopping/early_stopping.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/early_stopping/early_stopping.ipynb"
/>

# Trial-level early stopping

Trial-level early stopping aims to monitor the results of expensive evaluations with
timeseries-like data and terminate those that are unlikely to produce promising results
prior to completing that evaluation. This reduces computational waste, and enables the
same amount of resources to explore more configurations. Early stopping is useful for
expensive to evaluate problems where stepwise information is available on the way to the
final measurement.

Like the [Getting Started tutorial](../getting_started) we'll be minimizing the
Hartmann6 function, but this time we've modified it to incorporate a new parameter $t$
which allows the function to produce timeseries-like data where the value returned is
closer and closer to Hartmann6's true value as $t$ increases. At $t = 100$ the function
will simply return Hartmann6's unaltered value.

$$

f(x, t) = hartmann6(x) - log_2(t/100)

$$

While the function is synthetic, the workflow captures the intended principles for this
tutorial and is similar to the process of training typical machine learning models.

## Learning Objectives

- Understand when time-series-like data can be used in an optimization experiment
- Run a simple optimization experiment with early stopping
- Configure details of an early stopping strategy
- Analyze the results of the optimization

## Prerequisites

- Familiarity with Python and basic programming concepts
- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)
- [Getting Started with Ax](../getting_started/index.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import numpy as np
from ax.api.client import Client
from ax.api.configs import  RangeParameterConfig
```

## Step 2: Initialize the Client

Create an instance of the `Client` to manage the state of your experiment.

```python
client = Client()
```

## Step 3: Configure the Experiment

The `Client` instance can be configured with a series of `Config`s that define how the
experiment will be run.

The Hartmann6 problem is usually evaluated on the hypercube $x_i \in (0, 1)$, so we will
define six identical `RangeParameterConfig`s with these bounds.

You may specify additional features like parameter constraints to further refine the
search space and parameter scaling to help navigate parameters with nonuniform effects.

```python
# Define six float parameters for the Hartmann6 function
parameters = [
    RangeParameterConfig(
        name=f"x{i + 1}", parameter_type="float", bounds=(0, 1)
    )
    for i in range(6)
]

client.configure_experiment(parameters=parameters)
```

## Step 4: Configure Optimization

Now, we must configure the objective for this optimization, which we do using
`Client.configure_optimization`. This method expects a string `objective`, an expression
containing either a single metric to maximize, a linear combination of metrics to
maximize, or a tuple of multiple metrics to jointly maximize. These expressions are
parsed using [SymPy](https://www.sympy.org/en/index.html). For example:

- `"score"` would direct Ax to maximize a metric named score
- `"-loss"` would direct Ax to Ax to minimize a metric named loss
- `"task_0 + 0.5 * task_1"` would direct Ax to maximize the sum of two task scores,
  downweighting task_1 by a factor of 0.5
- `"score, -flops"` would direct Ax to simultaneously maximize score while minimizing
  flops

See these recipes for more information on configuring
[objectives](../../recipes/multi-objective-optimization) and
[outcome constraints](../../recipes/outcome-constraints).

```python
client.configure_optimization(objective="-hartmann6")
```

## Step 5: Run Trials with early stopping

Here, we will configure the ask-tell loop.

We begin by defining our Hartmann6 function as written above. Remember, this is just an
example problem and any Python function can be substituted here.

Then we will iteratively do the following:

- Call `client.get_next_trials` to "ask" Ax for a parameterization to evaluate
- Evaluate `hartmann6_curve` using those parameters in an inner loop to simulate the
  generation of timeseries data
- "Tell" Ax the partial result using `client.attach_data`
- Query whether the trial should be stopped via `client.should_stop_trial_early`
- Stop the underperforming trial and report back to Ax that is has been stopped

This loop will run multiple trials to optimize the function.

Ax will configure an EarlyStoppingStrategy when `should_stop_trial_early` is called for
the first time. By default Ax uses a Percentile early stopping strategy which will
terminate a trial early if its performance falls below a percentile threshold when
compared to other trials at the same step. Early stopping can only occur after a minimum
number of `progressions` to prevent premature early stopping. This validates that both
enough data is gathered to make a decision and there is a minimum number of completed
trials with curve data; these completed trials establish a baseline.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array(
        [
            [10, 3, 17, 3.5, 1.7, 8],
            [0.05, 10, 17, 0.1, 8, 14],
            [3, 3.5, 1.7, 10, 17, 8],
            [17, 8, 0.05, 10, 0.1, 14],
        ]
    )
    P = 10**-4 * np.array(
        [
            [1312, 1696, 5569, 124, 8283, 5886],
            [2329, 4135, 8307, 3736, 1004, 9991],
            [2348, 1451, 3522, 2883, 3047, 6650],
            [4047, 8828, 8732, 5743, 1091, 381],
        ]
    )

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j]) ** 2
        outer += alpha[i] * np.exp(-inner)
    return -outer


# Hartmann6 function with additional t term such that
# hartmann6(X) == hartmann6_curve(X, t=100)
def hartmann6_curve(x1, x2, x3, x4, x5, x6, t):
    return hartmann6(x1, x2, x3, x4, x5, x6) - np.log2(t / 100)


(
    hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0),
    hartmann6_curve(0.1, 0.45, 0.8, 0.25, 0.552, 1.0, 100),
)
```

<CellOutput>
{
`(np.float64(-0.4878737485613134), np.float64(-0.4878737485613134))`
}
</CellOutput>

```python
maximum_progressions = 100  # Observe hartmann6_curve over 100 progressions

for _ in range(30):  # Run 30 rounds of trials
    trials = client.get_next_trials(max_trials=3)
    for trial_index, parameters in trials.items():
        for t in range(1, maximum_progressions + 1):
            raw_data = {"hartmann6": hartmann6_curve(t=t, **parameters)}

            # On the final reading call complete_trial and break, else call attach_data
            if t == maximum_progressions:
                client.complete_trial(
                    trial_index=trial_index, raw_data=raw_data, progression=t
                )
                break

            client.attach_data(
                trial_index=trial_index, raw_data=raw_data, progression=t
            )

            # If the trial is underperforming, stop it
            if client.should_stop_trial_early(trial_index=trial_index):
                client.mark_trial_early_stopped(trial_index=trial_index)
                break
```

<CellOutput>
{
`[INFO 09-05 18:05:42] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol'), GenerationNode(node_name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, model_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')]), GenerationNode(node_name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, model_key_override=None)], transition_criteria=[])]) chosen based on user input and problem structure.
[INFO 09-05 18:05:42] ax.api.client: Generated new trial 0 with parameters {'x1': 0.5, 'x2': 0.5, 'x3': 0.5, 'x4': 0.5, 'x5': 0.5, 'x6': 0.5} using GenerationNode CenterOfSearchSpace.
[INFO 09-05 18:05:42] ax.api.client: Generated new trial 1 with parameters {'x1': 0.609462, 'x2': 0.544246, 'x3': 0.682442, 'x4': 0.636599, 'x5': 0.555102, 'x6': 0.318981} using GenerationNode Sobol.
[INFO 09-05 18:05:42] ax.api.client: Generated new trial 2 with parameters {'x1': 0.074393, 'x2': 0.267562, 'x3': 0.090851, 'x4': 0.148223, 'x5': 0.033599, 'x6': 0.598113} using GenerationNode Sobol.
[INFO 09-05 18:05:43] ax.api.client: Trial 0 marked COMPLETED.
[INFO 09-05 18:05:45] ax.api.client: Trial 1 marked COMPLETED.
[INFO 09-05 18:05:46] ax.api.client: Trial 2 marked COMPLETED.
[INFO 09-05 18:05:46] ax.api.client: Generated new trial 3 with parameters {'x1': 0.343109, 'x2': 0.872151, 'x3': 0.883883, 'x4': 0.874278, 'x5': 0.355764, 'x6': 0.981265} using GenerationNode Sobol.
[INFO 09-05 18:05:46] ax.api.client: Generated new trial 4 with parameters {'x1': 0.847058, 'x2': 0.064087, 'x3': 0.358205, 'x4': 0.347065, 'x5': 0.865503, 'x6': 0.201193} using GenerationNode Sobol.
[WARNING 09-05 18:05:46] ax.api.client: 3 trials requested but only 2 could be generated.
[INFO 09-05 18:05:48] ax.api.client: Trial 3 marked COMPLETED.
[INFO 09-05 18:05:49] ax.api.client: Trial 4 marked COMPLETED.
[INFO 09-05 18:05:50] ax.api.client: Generated new trial 5 with parameters {'x1': 0.086451, 'x2': 0.830646, 'x3': 0.334765, 'x4': 0.368886, 'x5': 0.055774, 'x6': 0.550202} using GenerationNode MBM.
[WARNING 09-05 18:05:50] ax.api.client: 3 trials requested but only 1 could be generated.
[INFO 09-05 18:05:50] ax.early_stopping.strategies.percentile: Early stoppinging trial 5: Trial objective value 3.1269533318184037 is worse than 50.0-th percentile (3.10492496403148) across comparable trials..
[INFO 09-05 18:05:50] ax.api.client: Trial 5 should be stopped early: Trial objective value 3.1269533318184037 is worse than 50.0-th percentile (3.10492496403148) across comparable trials.
[INFO 09-05 18:05:50] ax.api.client: Trial 5 marked EARLY_STOPPED.
[INFO 09-05 18:05:51] ax.api.client: Generated new trial 6 with parameters {'x1': 0.005635, 'x2': 1.0, 'x3': 0.0, 'x4': 0.096854, 'x5': 0.701196, 'x6': 0.5747} using GenerationNode MBM.
[INFO 09-05 18:05:51] ax.api.client: Generated new trial 7 with parameters {'x1': 0.873042, 'x2': 0.740674, 'x3': 0.0, 'x4': 0.262813, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:05:51] ax.api.client: Generated new trial 8 with parameters {'x1': 0.0, 'x2': 0.024295, 'x3': 0.981783, 'x4': 0.0, 'x5': 0.388181, 'x6': 0.905892} using GenerationNode MBM.
[INFO 09-05 18:05:51] ax.early_stopping.strategies.percentile: Early stoppinging trial 6: Trial objective value 3.313869082561639 is worse than 50.0-th percentile (3.1269533318184037) across comparable trials..
[INFO 09-05 18:05:51] ax.api.client: Trial 6 should be stopped early: Trial objective value 3.313869082561639 is worse than 50.0-th percentile (3.1269533318184037) across comparable trials.
[INFO 09-05 18:05:51] ax.api.client: Trial 6 marked EARLY_STOPPED.
[INFO 09-05 18:05:52] ax.early_stopping.strategies.percentile: Early stoppinging trial 7: Trial objective value 3.30464810023852 is worse than 50.0-th percentile (3.1821290220234815) across comparable trials..
[INFO 09-05 18:05:52] ax.api.client: Trial 7 should be stopped early: Trial objective value 3.30464810023852 is worse than 50.0-th percentile (3.1821290220234815) across comparable trials.
[INFO 09-05 18:05:52] ax.api.client: Trial 7 marked EARLY_STOPPED.
[INFO 09-05 18:05:55] ax.api.client: Trial 8 marked COMPLETED.
[INFO 09-05 18:05:56] ax.api.client: Generated new trial 9 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.0, 'x5': 0.998216, 'x6': 0.990139} using GenerationNode MBM.
[INFO 09-05 18:05:56] ax.api.client: Generated new trial 10 with parameters {'x1': 1.0, 'x2': 0.855264, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:05:56] ax.api.client: Generated new trial 11 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.0, 'x4': 0.935195, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:05:56] ax.early_stopping.strategies.percentile: Early stoppinging trial 9: Trial objective value 3.3217766885044306 is worse than 50.0-th percentile (3.1821290220234815) across comparable trials..
[INFO 09-05 18:05:56] ax.api.client: Trial 9 should be stopped early: Trial objective value 3.3217766885044306 is worse than 50.0-th percentile (3.1821290220234815) across comparable trials.
[INFO 09-05 18:05:56] ax.api.client: Trial 9 marked EARLY_STOPPED.
[INFO 09-05 18:05:56] ax.early_stopping.strategies.percentile: Early stoppinging trial 10: Trial objective value 3.0903320292124987 is worse than 50.0-th percentile (2.945393072494621) across comparable trials..
[INFO 09-05 18:05:56] ax.api.client: Trial 10 should be stopped early: Trial objective value 3.0903320292124987 is worse than 50.0-th percentile (2.945393072494621) across comparable trials.
[INFO 09-05 18:05:56] ax.api.client: Trial 10 marked EARLY_STOPPED.
[INFO 09-05 18:05:57] ax.early_stopping.strategies.percentile: Early stoppinging trial 11: Trial objective value 3.31946165485316 is worse than 50.0-th percentile (3.2325701325954963) across comparable trials..
[INFO 09-05 18:05:57] ax.api.client: Trial 11 should be stopped early: Trial objective value 3.31946165485316 is worse than 50.0-th percentile (3.2325701325954963) across comparable trials.
[INFO 09-05 18:05:57] ax.api.client: Trial 11 marked EARLY_STOPPED.
[INFO 09-05 18:05:59] ax.api.client: Generated new trial 12 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.72891, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:05:59] ax.api.client: Generated new trial 13 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.0, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:05:59] ax.api.client: Generated new trial 14 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:05:59] ax.early_stopping.strategies.percentile: Early stoppinging trial 12: Trial objective value 3.313872969760628 is worse than 50.0-th percentile (3.2373047122285596) across comparable trials..
[INFO 09-05 18:05:59] ax.api.client: Trial 12 should be stopped early: Trial objective value 3.313872969760628 is worse than 50.0-th percentile (3.2373047122285596) across comparable trials.
[INFO 09-05 18:05:59] ax.api.client: Trial 12 marked EARLY_STOPPED.
[INFO 09-05 18:05:59] ax.early_stopping.strategies.percentile: Early stoppinging trial 13: Trial objective value 3.321786468622737 is worse than 50.0-th percentile (3.27097640623354) across comparable trials..
[INFO 09-05 18:05:59] ax.api.client: Trial 13 should be stopped early: Trial objective value 3.321786468622737 is worse than 50.0-th percentile (3.27097640623354) across comparable trials.
[INFO 09-05 18:05:59] ax.api.client: Trial 13 marked EARLY_STOPPED.
[INFO 09-05 18:05:59] ax.early_stopping.strategies.percentile: Early stoppinging trial 14: Trial objective value 3.3207381844163524 is worse than 50.0-th percentile (3.30464810023852) across comparable trials..
[INFO 09-05 18:05:59] ax.api.client: Trial 14 should be stopped early: Trial objective value 3.3207381844163524 is worse than 50.0-th percentile (3.30464810023852) across comparable trials.
[INFO 09-05 18:05:59] ax.api.client: Trial 14 marked EARLY_STOPPED.
[INFO 09-05 18:06:02] ax.api.client: Generated new trial 15 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.896009, 'x4': 0.0, 'x5': 0.281603, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:02] ax.api.client: Generated new trial 16 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:06:02] ax.api.client: Generated new trial 17 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 15: Trial objective value 3.1340659221449907 is worse than 50.0-th percentile (3.01786255085356) across comparable trials..
[INFO 09-05 18:06:02] ax.api.client: Trial 15 should be stopped early: Trial objective value 3.1340659221449907 is worse than 50.0-th percentile (3.01786255085356) across comparable trials.
[INFO 09-05 18:06:02] ax.api.client: Trial 15 marked EARLY_STOPPED.
[INFO 09-05 18:06:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 16: Trial objective value 3.3161937420969143 is worse than 50.0-th percentile (3.30464810023852) across comparable trials..
[INFO 09-05 18:06:02] ax.api.client: Trial 16 should be stopped early: Trial objective value 3.3161937420969143 is worse than 50.0-th percentile (3.30464810023852) across comparable trials.
[INFO 09-05 18:06:02] ax.api.client: Trial 16 marked EARLY_STOPPED.
[INFO 09-05 18:06:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 17: Trial objective value 3.1628211578844403 is worse than 50.0-th percentile (3.0903320292124987) across comparable trials..
[INFO 09-05 18:06:02] ax.api.client: Trial 17 should be stopped early: Trial objective value 3.1628211578844403 is worse than 50.0-th percentile (3.0903320292124987) across comparable trials.
[INFO 09-05 18:06:02] ax.api.client: Trial 17 marked EARLY_STOPPED.
[WARNING 09-05 18:06:07] ax.generation_strategy.generation_node: gen failed with error GenerationStrategy exceeded MAX_GEN_ATTEMPTS of 5 while trying to generate a unique parameterization. This indicates that the search space has likely been fully explored, or that the sweep has converged., switching to fallback model with generator_enum Generators.SOBOL
[INFO 09-05 18:06:07] ax.api.client: Generated new trial 18 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.105183, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:07] ax.api.client: Generated new trial 19 with parameters {'x1': 0.827059, 'x2': 0.239657, 'x3': 0.742998, 'x4': 0.636163, 'x5': 0.291761, 'x6': 0.450915} using GenerationNode MBM.
[INFO 09-05 18:06:07] ax.api.client: Generated new trial 20 with parameters {'x1': 0.121709, 'x2': 0.932243, 'x3': 0.27909, 'x4': 0.224411, 'x5': 0.551922, 'x6': 0.833053} using GenerationNode MBM.
[INFO 09-05 18:06:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 18: Trial objective value 3.1520728389048283 is worse than 50.0-th percentile (3.0950666088455616) across comparable trials..
[INFO 09-05 18:06:07] ax.api.client: Trial 18 should be stopped early: Trial objective value 3.1520728389048283 is worse than 50.0-th percentile (3.0950666088455616) across comparable trials.
[INFO 09-05 18:06:07] ax.api.client: Trial 18 marked EARLY_STOPPED.
[INFO 09-05 18:06:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 19: Trial objective value 2.888033685532198 is worse than 50.0-th percentile (2.8198621904107624) across comparable trials..
[INFO 09-05 18:06:07] ax.api.client: Trial 19 should be stopped early: Trial objective value 2.888033685532198 is worse than 50.0-th percentile (2.8198621904107624) across comparable trials.
[INFO 09-05 18:06:07] ax.api.client: Trial 19 marked EARLY_STOPPED.
[INFO 09-05 18:06:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 20: Trial objective value 2.9483004142530898 is worse than 50.0-th percentile (2.8539479379714803) across comparable trials..
[INFO 09-05 18:06:07] ax.api.client: Trial 20 should be stopped early: Trial objective value 2.9483004142530898 is worse than 50.0-th percentile (2.8539479379714803) across comparable trials.
[INFO 09-05 18:06:07] ax.api.client: Trial 20 marked EARLY_STOPPED.
[WARNING 09-05 18:06:12] ax.generation_strategy.generation_node: gen failed with error GenerationStrategy exceeded MAX_GEN_ATTEMPTS of 5 while trying to generate a unique parameterization. This indicates that the search space has likely been fully explored, or that the sweep has converged., switching to fallback model with generator_enum Generators.SOBOL
[INFO 09-05 18:06:12] ax.api.client: Generated new trial 21 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.608766, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:12] ax.api.client: Generated new trial 22 with parameters {'x1': 0.342962, 'x2': 0.348694, 'x3': 0.880902, 'x4': 0.94004, 'x5': 0.957152, 'x6': 0.741367} using GenerationNode MBM.
[INFO 09-05 18:06:12] ax.api.client: Generated new trial 23 with parameters {'x1': 0.606906, 'x2': 0.54189, 'x3': 0.096767, 'x4': 0.418199, 'x5': 0.199181, 'x6': 0.109008} using GenerationNode MBM.
[INFO 09-05 18:06:12] ax.early_stopping.strategies.percentile: Early stoppinging trial 21: Trial objective value 3.3145317569625514 is worse than 50.0-th percentile (3.294950522144569) across comparable trials..
[INFO 09-05 18:06:12] ax.api.client: Trial 21 should be stopped early: Trial objective value 3.3145317569625514 is worse than 50.0-th percentile (3.294950522144569) across comparable trials.
[INFO 09-05 18:06:12] ax.api.client: Trial 21 marked EARLY_STOPPED.
[INFO 09-05 18:06:12] ax.early_stopping.strategies.percentile: Early stoppinging trial 22: Trial objective value 3.3167892910211245 is worse than 50.0-th percentile (3.300324681634375) across comparable trials..
[INFO 09-05 18:06:12] ax.api.client: Trial 22 should be stopped early: Trial objective value 3.3167892910211245 is worse than 50.0-th percentile (3.300324681634375) across comparable trials.
[INFO 09-05 18:06:12] ax.api.client: Trial 22 marked EARLY_STOPPED.
[INFO 09-05 18:06:17] ax.api.client: Trial 23 marked COMPLETED.
[INFO 09-05 18:06:20] ax.api.client: Generated new trial 24 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.781593, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:20] ax.api.client: Generated new trial 25 with parameters {'x1': 1.0, 'x2': 0.983465, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:20] ax.api.client: Generated new trial 26 with parameters {'x1': 0.0, 'x2': 0.832683, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:06:20] ax.early_stopping.strategies.percentile: Early stoppinging trial 24: Trial objective value 3.3200302947570735 is worse than 50.0-th percentile (3.300324681634375) across comparable trials..
[INFO 09-05 18:06:20] ax.api.client: Trial 24 should be stopped early: Trial objective value 3.3200302947570735 is worse than 50.0-th percentile (3.300324681634375) across comparable trials.
[INFO 09-05 18:06:20] ax.api.client: Trial 24 marked EARLY_STOPPED.
[INFO 09-05 18:06:21] ax.early_stopping.strategies.percentile: Early stoppinging trial 25: Trial objective value 3.1583463938904455 is worse than 50.0-th percentile (3.0820816627747236) across comparable trials..
[INFO 09-05 18:06:21] ax.api.client: Trial 25 should be stopped early: Trial objective value 3.1583463938904455 is worse than 50.0-th percentile (3.0820816627747236) across comparable trials.
[INFO 09-05 18:06:21] ax.api.client: Trial 25 marked EARLY_STOPPED.
[INFO 09-05 18:06:21] ax.early_stopping.strategies.percentile: Early stoppinging trial 26: Trial objective value 3.3141494134420704 is worse than 50.0-th percentile (3.300324681634375) across comparable trials..
[INFO 09-05 18:06:21] ax.api.client: Trial 26 should be stopped early: Trial objective value 3.3141494134420704 is worse than 50.0-th percentile (3.300324681634375) across comparable trials.
[INFO 09-05 18:06:21] ax.api.client: Trial 26 marked EARLY_STOPPED.
[WARNING 09-05 18:06:26] ax.generation_strategy.generation_node: gen failed with error GenerationStrategy exceeded MAX_GEN_ATTEMPTS of 5 while trying to generate a unique parameterization. This indicates that the search space has likely been fully explored, or that the sweep has converged., switching to fallback model with generator_enum Generators.SOBOL
[INFO 09-05 18:06:26] ax.api.client: Generated new trial 27 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.945506, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:26] ax.api.client: Generated new trial 28 with parameters {'x1': 0.654467, 'x2': 0.436068, 'x3': 0.458329, 'x4': 0.292275, 'x5': 0.087947, 'x6': 0.283393} using GenerationNode MBM.
[INFO 09-05 18:06:26] ax.api.client: Generated new trial 29 with parameters {'x1': 0.418355, 'x2': 0.735832, 'x3': 0.547157, 'x4': 0.818297, 'x5': 0.818266, 'x6': 0.932156} using GenerationNode MBM.
[INFO 09-05 18:06:26] ax.early_stopping.strategies.percentile: Early stoppinging trial 27: Trial objective value 3.320882954128496 is worse than 50.0-th percentile (3.3024863909364477) across comparable trials..
[INFO 09-05 18:06:26] ax.api.client: Trial 27 should be stopped early: Trial objective value 3.320882954128496 is worse than 50.0-th percentile (3.3024863909364477) across comparable trials.
[INFO 09-05 18:06:26] ax.api.client: Trial 27 marked EARLY_STOPPED.
[INFO 09-05 18:06:26] ax.early_stopping.strategies.percentile: Early stoppinging trial 28: Trial objective value 2.8282036608728722 is worse than 50.0-th percentile (2.8240329256418173) across comparable trials..
[INFO 09-05 18:06:26] ax.api.client: Trial 28 should be stopped early: Trial objective value 2.8282036608728722 is worse than 50.0-th percentile (2.8240329256418173) across comparable trials.
[INFO 09-05 18:06:26] ax.api.client: Trial 28 marked EARLY_STOPPED.
[INFO 09-05 18:06:27] ax.early_stopping.strategies.percentile: Early stoppinging trial 29: Trial objective value 3.3133083810436452 is worse than 50.0-th percentile (3.3024863909364477) across comparable trials..
[INFO 09-05 18:06:27] ax.api.client: Trial 29 should be stopped early: Trial objective value 3.3133083810436452 is worse than 50.0-th percentile (3.3024863909364477) across comparable trials.
[INFO 09-05 18:06:27] ax.api.client: Trial 29 marked EARLY_STOPPED.
[INFO 09-05 18:06:31] ax.api.client: Generated new trial 30 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.077979, 'x5': 0.562443, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:31] ax.api.client: Generated new trial 31 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.189629, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:31] ax.api.client: Generated new trial 32 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:31] ax.early_stopping.strategies.percentile: Early stoppinging trial 30: Trial objective value 3.308672721198281 is worse than 50.0-th percentile (3.30464810023852) across comparable trials..
[INFO 09-05 18:06:31] ax.api.client: Trial 30 should be stopped early: Trial objective value 3.308672721198281 is worse than 50.0-th percentile (3.30464810023852) across comparable trials.
[INFO 09-05 18:06:31] ax.api.client: Trial 30 marked EARLY_STOPPED.
[INFO 09-05 18:06:32] ax.early_stopping.strategies.percentile: Early stoppinging trial 31: Trial objective value 3.15511503963639 is worse than 50.0-th percentile (3.0820816627747236) across comparable trials..
[INFO 09-05 18:06:32] ax.api.client: Trial 31 should be stopped early: Trial objective value 3.15511503963639 is worse than 50.0-th percentile (3.0820816627747236) across comparable trials.
[INFO 09-05 18:06:32] ax.api.client: Trial 31 marked EARLY_STOPPED.
[INFO 09-05 18:06:32] ax.early_stopping.strategies.percentile: Early stoppinging trial 32: Trial objective value 3.320960284839637 is worse than 50.0-th percentile (3.30464810023852) across comparable trials..
[INFO 09-05 18:06:32] ax.api.client: Trial 32 should be stopped early: Trial objective value 3.320960284839637 is worse than 50.0-th percentile (3.30464810023852) across comparable trials.
[INFO 09-05 18:06:32] ax.api.client: Trial 32 marked EARLY_STOPPED.
[INFO 09-05 18:06:36] ax.api.client: Generated new trial 33 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.161682, 'x5': 0.084132, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:36] ax.api.client: Generated new trial 34 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.06363, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:36] ax.api.client: Generated new trial 35 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.256588, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:36] ax.early_stopping.strategies.percentile: Early stoppinging trial 33: Trial objective value 3.146001261176301 is worse than 50.0-th percentile (3.0903320292124987) across comparable trials..
[INFO 09-05 18:06:36] ax.api.client: Trial 33 should be stopped early: Trial objective value 3.146001261176301 is worse than 50.0-th percentile (3.0903320292124987) across comparable trials.
[INFO 09-05 18:06:36] ax.api.client: Trial 33 marked EARLY_STOPPED.
[INFO 09-05 18:06:36] ax.early_stopping.strategies.percentile: Early stoppinging trial 34: Trial objective value 3.321891140517965 is worse than 50.0-th percentile (3.30464810023852) across comparable trials..
[INFO 09-05 18:06:36] ax.api.client: Trial 34 should be stopped early: Trial objective value 3.321891140517965 is worse than 50.0-th percentile (3.30464810023852) across comparable trials.
[INFO 09-05 18:06:36] ax.api.client: Trial 34 marked EARLY_STOPPED.
[INFO 09-05 18:06:37] ax.early_stopping.strategies.percentile: Early stoppinging trial 35: Trial objective value 3.3218018081941794 is worse than 50.0-th percentile (3.3066604107184006) across comparable trials..
[INFO 09-05 18:06:37] ax.api.client: Trial 35 should be stopped early: Trial objective value 3.3218018081941794 is worse than 50.0-th percentile (3.3066604107184006) across comparable trials.
[INFO 09-05 18:06:37] ax.api.client: Trial 35 marked EARLY_STOPPED.
[INFO 09-05 18:06:40] ax.api.client: Generated new trial 36 with parameters {'x1': 0.383942, 'x2': 1.0, 'x3': 1.0, 'x4': 0.172444, 'x5': 0.683016, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:40] ax.api.client: Generated new trial 37 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.084109, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:40] ax.api.client: Generated new trial 38 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.270246, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:41] ax.early_stopping.strategies.percentile: Early stoppinging trial 36: Trial objective value 3.316500444939452 is worse than 50.0-th percentile (3.308672721198281) across comparable trials..
[INFO 09-05 18:06:41] ax.api.client: Trial 36 should be stopped early: Trial objective value 3.316500444939452 is worse than 50.0-th percentile (3.308672721198281) across comparable trials.
[INFO 09-05 18:06:41] ax.api.client: Trial 36 marked EARLY_STOPPED.
[INFO 09-05 18:06:41] ax.early_stopping.strategies.percentile: Early stoppinging trial 37: Trial objective value 3.162335000885876 is worse than 50.0-th percentile (3.0950666088455616) across comparable trials..
[INFO 09-05 18:06:41] ax.api.client: Trial 37 should be stopped early: Trial objective value 3.162335000885876 is worse than 50.0-th percentile (3.0950666088455616) across comparable trials.
[INFO 09-05 18:06:41] ax.api.client: Trial 37 marked EARLY_STOPPED.
[INFO 09-05 18:06:41] ax.early_stopping.strategies.percentile: Early stoppinging trial 38: Trial objective value 3.154369899536861 is worse than 50.0-th percentile (3.099801188478625) across comparable trials..
[INFO 09-05 18:06:41] ax.api.client: Trial 38 should be stopped early: Trial objective value 3.154369899536861 is worse than 50.0-th percentile (3.099801188478625) across comparable trials.
[INFO 09-05 18:06:41] ax.api.client: Trial 38 marked EARLY_STOPPED.
[INFO 09-05 18:06:45] ax.api.client: Generated new trial 39 with parameters {'x1': 0.0, 'x2': 0.940283, 'x3': 0.236851, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:45] ax.api.client: Generated new trial 40 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.078676, 'x4': 0.0, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:45] ax.api.client: Generated new trial 41 with parameters {'x1': 1.0, 'x2': 0.856641, 'x3': 0.304096, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:45] ax.early_stopping.strategies.percentile: Early stoppinging trial 39: Trial objective value 3.3098082689052934 is worse than 50.0-th percentile (3.3066604107184006) across comparable trials..
[INFO 09-05 18:06:45] ax.api.client: Trial 39 should be stopped early: Trial objective value 3.3098082689052934 is worse than 50.0-th percentile (3.3066604107184006) across comparable trials.
[INFO 09-05 18:06:45] ax.api.client: Trial 39 marked EARLY_STOPPED.
[INFO 09-05 18:06:45] ax.early_stopping.strategies.percentile: Early stoppinging trial 40: Trial objective value 3.3213848388005784 is worse than 50.0-th percentile (3.308672721198281) across comparable trials..
[INFO 09-05 18:06:45] ax.api.client: Trial 40 should be stopped early: Trial objective value 3.3213848388005784 is worse than 50.0-th percentile (3.308672721198281) across comparable trials.
[INFO 09-05 18:06:45] ax.api.client: Trial 40 marked EARLY_STOPPED.
[INFO 09-05 18:06:46] ax.early_stopping.strategies.percentile: Early stoppinging trial 41: Trial objective value 3.317380018819035 is worse than 50.0-th percentile (3.309240495051787) across comparable trials..
[INFO 09-05 18:06:46] ax.api.client: Trial 41 should be stopped early: Trial objective value 3.317380018819035 is worse than 50.0-th percentile (3.309240495051787) across comparable trials.
[INFO 09-05 18:06:46] ax.api.client: Trial 41 marked EARLY_STOPPED.
[INFO 09-05 18:06:50] ax.api.client: Generated new trial 42 with parameters {'x1': 0.161656, 'x2': 1.0, 'x3': 1.0, 'x4': 0.182191, 'x5': 0.192467, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:50] ax.api.client: Generated new trial 43 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.182567, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:50] ax.api.client: Generated new trial 44 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.004209, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:50] ax.early_stopping.strategies.percentile: Early stoppinging trial 42: Trial objective value 3.128966763555105 is worse than 50.0-th percentile (3.114383976016865) across comparable trials..
[INFO 09-05 18:06:50] ax.api.client: Trial 42 should be stopped early: Trial objective value 3.128966763555105 is worse than 50.0-th percentile (3.114383976016865) across comparable trials.
[INFO 09-05 18:06:50] ax.api.client: Trial 42 marked EARLY_STOPPED.
[INFO 09-05 18:06:50] ax.early_stopping.strategies.percentile: Early stoppinging trial 43: Trial objective value 3.32192482373484 is worse than 50.0-th percentile (3.309240495051787) across comparable trials..
[INFO 09-05 18:06:50] ax.api.client: Trial 43 should be stopped early: Trial objective value 3.32192482373484 is worse than 50.0-th percentile (3.309240495051787) across comparable trials.
[INFO 09-05 18:06:50] ax.api.client: Trial 43 marked EARLY_STOPPED.
[INFO 09-05 18:06:51] ax.early_stopping.strategies.percentile: Early stoppinging trial 44: Trial objective value 3.321891617249821 is worse than 50.0-th percentile (3.3098082689052934) across comparable trials..
[INFO 09-05 18:06:51] ax.api.client: Trial 44 should be stopped early: Trial objective value 3.321891617249821 is worse than 50.0-th percentile (3.3098082689052934) across comparable trials.
[INFO 09-05 18:06:51] ax.api.client: Trial 44 marked EARLY_STOPPED.
[INFO 09-05 18:06:55] ax.api.client: Generated new trial 45 with parameters {'x1': 0.619755, 'x2': 1.0, 'x3': 1.0, 'x4': 0.193411, 'x5': 0.704509, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:55] ax.api.client: Generated new trial 46 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.269319, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:55] ax.api.client: Generated new trial 47 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.013422, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:06:56] ax.early_stopping.strategies.percentile: Early stoppinging trial 45: Trial objective value 3.3187776278927945 is worse than 50.0-th percentile (3.3115583249744693) across comparable trials..
[INFO 09-05 18:06:56] ax.api.client: Trial 45 should be stopped early: Trial objective value 3.3187776278927945 is worse than 50.0-th percentile (3.3115583249744693) across comparable trials.
[INFO 09-05 18:06:56] ax.api.client: Trial 45 marked EARLY_STOPPED.
[INFO 09-05 18:06:56] ax.early_stopping.strategies.percentile: Early stoppinging trial 46: Trial objective value 3.1710276008239986 is worse than 50.0-th percentile (3.128966763555105) across comparable trials..
[INFO 09-05 18:06:56] ax.api.client: Trial 46 should be stopped early: Trial objective value 3.1710276008239986 is worse than 50.0-th percentile (3.128966763555105) across comparable trials.
[INFO 09-05 18:06:56] ax.api.client: Trial 46 marked EARLY_STOPPED.
[INFO 09-05 18:06:56] ax.early_stopping.strategies.percentile: Early stoppinging trial 47: Trial objective value 3.321891542651561 is worse than 50.0-th percentile (3.3115583249744693) across comparable trials..
[INFO 09-05 18:06:56] ax.api.client: Trial 47 should be stopped early: Trial objective value 3.321891542651561 is worse than 50.0-th percentile (3.3115583249744693) across comparable trials.
[INFO 09-05 18:06:56] ax.api.client: Trial 47 marked EARLY_STOPPED.
[INFO 09-05 18:07:01] ax.api.client: Generated new trial 48 with parameters {'x1': 0.867559, 'x2': 1.0, 'x3': 1.0, 'x4': 0.207674, 'x5': 0.858508, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:01] ax.api.client: Generated new trial 49 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.277398, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:01] ax.api.client: Generated new trial 50 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.023224, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:01] ax.early_stopping.strategies.percentile: Early stoppinging trial 48: Trial objective value 3.3216196650642975 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials..
[INFO 09-05 18:07:01] ax.api.client: Trial 48 should be stopped early: Trial objective value 3.3216196650642975 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials.
[INFO 09-05 18:07:01] ax.api.client: Trial 48 marked EARLY_STOPPED.
[INFO 09-05 18:07:01] ax.early_stopping.strategies.percentile: Early stoppinging trial 49: Trial objective value 3.170995805055301 is worse than 50.0-th percentile (3.131516342850048) across comparable trials..
[INFO 09-05 18:07:01] ax.api.client: Trial 49 should be stopped early: Trial objective value 3.170995805055301 is worse than 50.0-th percentile (3.131516342850048) across comparable trials.
[INFO 09-05 18:07:01] ax.api.client: Trial 49 marked EARLY_STOPPED.
[INFO 09-05 18:07:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 50: Trial objective value 3.321891463319722 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials..
[INFO 09-05 18:07:02] ax.api.client: Trial 50 should be stopped early: Trial objective value 3.321891463319722 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials.
[INFO 09-05 18:07:02] ax.api.client: Trial 50 marked EARLY_STOPPED.
[INFO 09-05 18:07:07] ax.api.client: Generated new trial 51 with parameters {'x1': 0.107583, 'x2': 1.0, 'x3': 1.0, 'x4': 0.158459, 'x5': 0.107704, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:07] ax.api.client: Generated new trial 52 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.13094, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:07] ax.api.client: Generated new trial 53 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.002017, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 51: Trial objective value 3.1411745246629588 is worse than 50.0-th percentile (3.1340659221449907) across comparable trials..
[INFO 09-05 18:07:07] ax.api.client: Trial 51 should be stopped early: Trial objective value 3.1411745246629588 is worse than 50.0-th percentile (3.1340659221449907) across comparable trials.
[INFO 09-05 18:07:07] ax.api.client: Trial 51 marked EARLY_STOPPED.
[INFO 09-05 18:07:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 52: Trial objective value 3.321925226146536 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials..
[INFO 09-05 18:07:07] ax.api.client: Trial 52 should be stopped early: Trial objective value 3.321925226146536 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials.
[INFO 09-05 18:07:07] ax.api.client: Trial 52 marked EARLY_STOPPED.
[INFO 09-05 18:07:07] ax.early_stopping.strategies.percentile: Early stoppinging trial 53: Trial objective value 3.3209600761733555 is worse than 50.0-th percentile (3.313588731802642) across comparable trials..
[INFO 09-05 18:07:07] ax.api.client: Trial 53 should be stopped early: Trial objective value 3.3209600761733555 is worse than 50.0-th percentile (3.313588731802642) across comparable trials.
[INFO 09-05 18:07:07] ax.api.client: Trial 53 marked EARLY_STOPPED.
[INFO 09-05 18:07:13] ax.api.client: Generated new trial 54 with parameters {'x1': 0.940881, 'x2': 1.0, 'x3': 1.0, 'x4': 0.193955, 'x5': 0.913159, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:13] ax.api.client: Generated new trial 55 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.286046, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:13] ax.api.client: Generated new trial 56 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.067543, 'x5': 1.0, 'x6': 0.427965} using GenerationNode MBM.
[INFO 09-05 18:07:13] ax.early_stopping.strategies.percentile: Early stoppinging trial 54: Trial objective value 3.3217925656925895 is worse than 50.0-th percentile (3.313869082561639) across comparable trials..
[INFO 09-05 18:07:13] ax.api.client: Trial 54 should be stopped early: Trial objective value 3.3217925656925895 is worse than 50.0-th percentile (3.313869082561639) across comparable trials.
[INFO 09-05 18:07:13] ax.api.client: Trial 54 marked EARLY_STOPPED.
[INFO 09-05 18:07:14] ax.early_stopping.strategies.percentile: Early stoppinging trial 55: Trial objective value 3.17098110502637 is worse than 50.0-th percentile (3.1376202234039745) across comparable trials..
[INFO 09-05 18:07:14] ax.api.client: Trial 55 should be stopped early: Trial objective value 3.17098110502637 is worse than 50.0-th percentile (3.1376202234039745) across comparable trials.
[INFO 09-05 18:07:14] ax.api.client: Trial 55 marked EARLY_STOPPED.
[INFO 09-05 18:07:14] ax.early_stopping.strategies.percentile: Early stoppinging trial 56: Trial objective value 3.3175326591116514 is worse than 50.0-th percentile (3.313869082561639) across comparable trials..
[INFO 09-05 18:07:14] ax.api.client: Trial 56 should be stopped early: Trial objective value 3.3175326591116514 is worse than 50.0-th percentile (3.313869082561639) across comparable trials.
[INFO 09-05 18:07:14] ax.api.client: Trial 56 marked EARLY_STOPPED.
[INFO 09-05 18:07:19] ax.api.client: Generated new trial 57 with parameters {'x1': 1.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.204034, 'x5': 1.0, 'x6': 0.90111} using GenerationNode MBM.
[INFO 09-05 18:07:19] ax.api.client: Generated new trial 58 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.285767, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:19] ax.api.client: Generated new trial 59 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.126843, 'x5': 1.0, 'x6': 0.327633} using GenerationNode MBM.
[INFO 09-05 18:07:20] ax.early_stopping.strategies.percentile: Early stoppinging trial 57: Trial objective value 3.321893110961321 is worse than 50.0-th percentile (3.3138710261611335) across comparable trials..
[INFO 09-05 18:07:20] ax.api.client: Trial 57 should be stopped early: Trial objective value 3.321893110961321 is worse than 50.0-th percentile (3.3138710261611335) across comparable trials.
[INFO 09-05 18:07:20] ax.api.client: Trial 57 marked EARLY_STOPPED.
[INFO 09-05 18:07:20] ax.early_stopping.strategies.percentile: Early stoppinging trial 58: Trial objective value 3.1709812662140116 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials..
[INFO 09-05 18:07:20] ax.api.client: Trial 58 should be stopped early: Trial objective value 3.1709812662140116 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials.
[INFO 09-05 18:07:20] ax.api.client: Trial 58 marked EARLY_STOPPED.
[INFO 09-05 18:07:20] ax.early_stopping.strategies.percentile: Early stoppinging trial 59: Trial objective value 3.1755997816234194 is worse than 50.0-th percentile (3.14358789291963) across comparable trials..
[INFO 09-05 18:07:20] ax.api.client: Trial 59 should be stopped early: Trial objective value 3.1755997816234194 is worse than 50.0-th percentile (3.14358789291963) across comparable trials.
[INFO 09-05 18:07:20] ax.api.client: Trial 59 marked EARLY_STOPPED.
[INFO 09-05 18:07:27] ax.api.client: Generated new trial 60 with parameters {'x1': 0.894753, 'x2': 1.0, 'x3': 1.0, 'x4': 0.211956, 'x5': 0.515618, 'x6': 0.908102} using GenerationNode MBM.
[INFO 09-05 18:07:27] ax.api.client: Generated new trial 61 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.266426, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:27] ax.api.client: Generated new trial 62 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.182165, 'x5': 1.0, 'x6': 0.513327} using GenerationNode MBM.
[INFO 09-05 18:07:27] ax.early_stopping.strategies.percentile: Early stoppinging trial 60: Trial objective value 3.1707395566515575 is worse than 50.0-th percentile (3.146001261176301) across comparable trials..
[INFO 09-05 18:07:27] ax.api.client: Trial 60 should be stopped early: Trial objective value 3.1707395566515575 is worse than 50.0-th percentile (3.146001261176301) across comparable trials.
[INFO 09-05 18:07:27] ax.api.client: Trial 60 marked EARLY_STOPPED.
[INFO 09-05 18:07:27] ax.early_stopping.strategies.percentile: Early stoppinging trial 61: Trial objective value 3.1710432046710335 is worse than 50.0-th percentile (3.1490370500405644) across comparable trials..
[INFO 09-05 18:07:27] ax.api.client: Trial 61 should be stopped early: Trial objective value 3.1710432046710335 is worse than 50.0-th percentile (3.1490370500405644) across comparable trials.
[INFO 09-05 18:07:27] ax.api.client: Trial 61 marked EARLY_STOPPED.
[INFO 09-05 18:07:28] ax.early_stopping.strategies.percentile: Early stoppinging trial 62: Trial objective value 3.3173153939920708 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials..
[INFO 09-05 18:07:28] ax.api.client: Trial 62 should be stopped early: Trial objective value 3.3173153939920708 is worse than 50.0-th percentile (3.3133083810436452) across comparable trials.
[INFO 09-05 18:07:28] ax.api.client: Trial 62 marked EARLY_STOPPED.
[INFO 09-05 18:07:33] ax.api.client: Generated new trial 63 with parameters {'x1': 0.813339, 'x2': 0.680901, 'x3': 0.069576, 'x4': 0.0, 'x5': 0.249018, 'x6': 0.736647} using GenerationNode MBM.
[INFO 09-05 18:07:33] ax.api.client: Generated new trial 64 with parameters {'x1': 0.0, 'x2': 0.730982, 'x3': 0.0, 'x4': 0.0, 'x5': 0.704499, 'x6': 0.641728} using GenerationNode MBM.
[INFO 09-05 18:07:33] ax.api.client: Generated new trial 65 with parameters {'x1': 1.0, 'x2': 0.51675, 'x3': 0.435665, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:07:33] ax.early_stopping.strategies.percentile: Early stoppinging trial 63: Trial objective value 2.9195294369490257 is worse than 50.0-th percentile (2.8282036608728722) across comparable trials..
[INFO 09-05 18:07:33] ax.api.client: Trial 63 should be stopped early: Trial objective value 2.9195294369490257 is worse than 50.0-th percentile (2.8282036608728722) across comparable trials.
[INFO 09-05 18:07:33] ax.api.client: Trial 63 marked EARLY_STOPPED.
[INFO 09-05 18:07:34] ax.early_stopping.strategies.percentile: Early stoppinging trial 64: Trial objective value 3.1650503327175707 is worse than 50.0-th percentile (3.1490370500405644) across comparable trials..
[INFO 09-05 18:07:34] ax.api.client: Trial 64 should be stopped early: Trial objective value 3.1650503327175707 is worse than 50.0-th percentile (3.1490370500405644) across comparable trials.
[INFO 09-05 18:07:34] ax.api.client: Trial 64 marked EARLY_STOPPED.
[INFO 09-05 18:07:34] ax.early_stopping.strategies.percentile: Early stoppinging trial 65: Trial objective value 2.980190554045273 is worse than 50.0-th percentile (2.858118673202535) across comparable trials..
[INFO 09-05 18:07:34] ax.api.client: Trial 65 should be stopped early: Trial objective value 2.980190554045273 is worse than 50.0-th percentile (2.858118673202535) across comparable trials.
[INFO 09-05 18:07:34] ax.api.client: Trial 65 marked EARLY_STOPPED.
[INFO 09-05 18:07:40] ax.api.client: Generated new trial 66 with parameters {'x1': 0.717016, 'x2': 0.720299, 'x3': 0.0, 'x4': 0.0, 'x5': 0.314474, 'x6': 0.625434} using GenerationNode MBM.
[INFO 09-05 18:07:40] ax.api.client: Generated new trial 67 with parameters {'x1': 0.0, 'x2': 0.79779, 'x3': 0.0, 'x4': 0.0, 'x5': 0.585266, 'x6': 0.524918} using GenerationNode MBM.
[INFO 09-05 18:07:40] ax.api.client: Generated new trial 68 with parameters {'x1': 1.0, 'x2': 0.517316, 'x3': 0.243155, 'x4': 0.0, 'x5': 0.04646, 'x6': 0.756724} using GenerationNode MBM.
[INFO 09-05 18:07:40] ax.early_stopping.strategies.percentile: Early stoppinging trial 66: Trial objective value 2.8955748574724187 is worse than 50.0-th percentile (2.888033685532198) across comparable trials..
[INFO 09-05 18:07:40] ax.api.client: Trial 66 should be stopped early: Trial objective value 2.8955748574724187 is worse than 50.0-th percentile (2.888033685532198) across comparable trials.
[INFO 09-05 18:07:40] ax.api.client: Trial 66 marked EARLY_STOPPED.
[INFO 09-05 18:07:41] ax.early_stopping.strategies.percentile: Early stoppinging trial 67: Trial objective value 3.012227426851908 is worse than 50.0-th percentile (2.8918042715023082) across comparable trials..
[INFO 09-05 18:07:41] ax.api.client: Trial 67 should be stopped early: Trial objective value 3.012227426851908 is worse than 50.0-th percentile (2.8918042715023082) across comparable trials.
[INFO 09-05 18:07:41] ax.api.client: Trial 67 marked EARLY_STOPPED.
[INFO 09-05 18:07:41] ax.early_stopping.strategies.percentile: Early stoppinging trial 68: Trial objective value 3.142197772628294 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials..
[INFO 09-05 18:07:41] ax.api.client: Trial 68 should be stopped early: Trial objective value 3.142197772628294 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials.
[INFO 09-05 18:07:41] ax.api.client: Trial 68 marked EARLY_STOPPED.
[INFO 09-05 18:07:47] ax.api.client: Generated new trial 69 with parameters {'x1': 0.577799, 'x2': 0.628317, 'x3': 0.119975, 'x4': 0.0, 'x5': 0.316478, 'x6': 0.762517} using GenerationNode MBM.
[INFO 09-05 18:07:47] ax.api.client: Generated new trial 70 with parameters {'x1': 0.0, 'x2': 0.730018, 'x3': 0.0, 'x4': 0.0, 'x5': 0.577236, 'x6': 0.551776} using GenerationNode MBM.
[INFO 09-05 18:07:47] ax.api.client: Generated new trial 71 with parameters {'x1': 1.0, 'x2': 0.472514, 'x3': 0.280521, 'x4': 0.0, 'x5': 0.066351, 'x6': 0.945613} using GenerationNode MBM.
[INFO 09-05 18:07:47] ax.early_stopping.strategies.percentile: Early stoppinging trial 69: Trial objective value 2.599900603807588 is worse than 50.0-th percentile (2.575822805224725) across comparable trials..
[INFO 09-05 18:07:47] ax.api.client: Trial 69 should be stopped early: Trial objective value 2.599900603807588 is worse than 50.0-th percentile (2.575822805224725) across comparable trials.
[INFO 09-05 18:07:47] ax.api.client: Trial 69 marked EARLY_STOPPED.
[INFO 09-05 18:07:48] ax.early_stopping.strategies.percentile: Early stoppinging trial 70: Trial objective value 2.9881094621523894 is worse than 50.0-th percentile (2.8918042715023082) across comparable trials..
[INFO 09-05 18:07:48] ax.api.client: Trial 70 should be stopped early: Trial objective value 2.9881094621523894 is worse than 50.0-th percentile (2.8918042715023082) across comparable trials.
[INFO 09-05 18:07:48] ax.api.client: Trial 70 marked EARLY_STOPPED.
[INFO 09-05 18:07:48] ax.early_stopping.strategies.percentile: Early stoppinging trial 71: Trial objective value 3.147104212439015 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials..
[INFO 09-05 18:07:48] ax.api.client: Trial 71 should be stopped early: Trial objective value 3.147104212439015 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials.
[INFO 09-05 18:07:48] ax.api.client: Trial 71 marked EARLY_STOPPED.
[INFO 09-05 18:07:54] ax.api.client: Generated new trial 72 with parameters {'x1': 0.480114, 'x2': 0.758399, 'x3': 0.196127, 'x4': 0.0, 'x5': 0.301143, 'x6': 0.689261} using GenerationNode MBM.
[INFO 09-05 18:07:54] ax.api.client: Generated new trial 73 with parameters {'x1': 0.0, 'x2': 0.887134, 'x3': 0.061474, 'x4': 0.0, 'x5': 0.667439, 'x6': 0.471255} using GenerationNode MBM.
[INFO 09-05 18:07:54] ax.api.client: Generated new trial 74 with parameters {'x1': 1.0, 'x2': 0.504874, 'x3': 0.312038, 'x4': 0.0, 'x5': 0.0, 'x6': 0.911149} using GenerationNode MBM.
[INFO 09-05 18:07:54] ax.early_stopping.strategies.percentile: Early stoppinging trial 72: Trial objective value 2.6573445274752463 is worse than 50.0-th percentile (2.599900603807588) across comparable trials..
[INFO 09-05 18:07:55] ax.api.client: Trial 72 should be stopped early: Trial objective value 2.6573445274752463 is worse than 50.0-th percentile (2.599900603807588) across comparable trials.
[INFO 09-05 18:07:55] ax.api.client: Trial 72 marked EARLY_STOPPED.
[INFO 09-05 18:07:55] ax.early_stopping.strategies.percentile: Early stoppinging trial 73: Trial objective value 3.170513844397607 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials..
[INFO 09-05 18:07:55] ax.api.client: Trial 73 should be stopped early: Trial objective value 3.170513844397607 is worse than 50.0-th percentile (3.1411745246629588) across comparable trials.
[INFO 09-05 18:07:55] ax.api.client: Trial 73 marked EARLY_STOPPED.
[INFO 09-05 18:07:55] ax.early_stopping.strategies.percentile: Early stoppinging trial 74: Trial objective value 3.1572007794028867 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials..
[INFO 09-05 18:07:55] ax.api.client: Trial 74 should be stopped early: Trial objective value 3.1572007794028867 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials.
[INFO 09-05 18:07:55] ax.api.client: Trial 74 marked EARLY_STOPPED.
[INFO 09-05 18:08:01] ax.api.client: Generated new trial 75 with parameters {'x1': 0.482718, 'x2': 0.7205, 'x3': 0.2195, 'x4': 0.0, 'x5': 0.284805, 'x6': 0.712092} using GenerationNode MBM.
[INFO 09-05 18:08:01] ax.api.client: Generated new trial 76 with parameters {'x1': 0.0, 'x2': 0.829122, 'x3': 0.092027, 'x4': 0.0, 'x5': 0.644344, 'x6': 0.48605} using GenerationNode MBM.
[INFO 09-05 18:08:01] ax.api.client: Generated new trial 77 with parameters {'x1': 1.0, 'x2': 0.505054, 'x3': 0.316369, 'x4': 0.0, 'x5': 0.0, 'x6': 0.925592} using GenerationNode MBM.
[INFO 09-05 18:08:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 75: Trial objective value 2.6110519831089394 is worse than 50.0-th percentile (2.6054762934582634) across comparable trials..
[INFO 09-05 18:08:02] ax.api.client: Trial 75 should be stopped early: Trial objective value 2.6110519831089394 is worse than 50.0-th percentile (2.6054762934582634) across comparable trials.
[INFO 09-05 18:08:02] ax.api.client: Trial 75 marked EARLY_STOPPED.
[INFO 09-05 18:08:02] ax.early_stopping.strategies.percentile: Early stoppinging trial 76: Trial objective value 3.158090615401054 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials..
[INFO 09-05 18:08:02] ax.api.client: Trial 76 should be stopped early: Trial objective value 3.158090615401054 is worse than 50.0-th percentile (3.1416861486456265) across comparable trials.
[INFO 09-05 18:08:02] ax.api.client: Trial 76 marked EARLY_STOPPED.
[INFO 09-05 18:08:03] ax.early_stopping.strategies.percentile: Early stoppinging trial 77: Trial objective value 3.157198732002286 is worse than 50.0-th percentile (3.142197772628294) across comparable trials..
[INFO 09-05 18:08:03] ax.api.client: Trial 77 should be stopped early: Trial objective value 3.157198732002286 is worse than 50.0-th percentile (3.142197772628294) across comparable trials.
[INFO 09-05 18:08:03] ax.api.client: Trial 77 marked EARLY_STOPPED.
[INFO 09-05 18:08:09] ax.api.client: Generated new trial 78 with parameters {'x1': 0.418542, 'x2': 0.50293, 'x3': 0.043221, 'x4': 0.0, 'x5': 0.29006, 'x6': 0.754229} using GenerationNode MBM.
[INFO 09-05 18:08:09] ax.api.client: Generated new trial 79 with parameters {'x1': 0.23438, 'x2': 0.654227, 'x3': 0.0, 'x4': 0.0, 'x5': 0.864773, 'x6': 0.334123} using GenerationNode MBM.
[INFO 09-05 18:08:09] ax.api.client: Generated new trial 80 with parameters {'x1': 0.530917, 'x2': 0.28381, 'x3': 0.225445, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:08:20] ax.api.client: Trial 78 marked COMPLETED.
[INFO 09-05 18:08:21] ax.early_stopping.strategies.percentile: Early stoppinging trial 79: Trial objective value 3.1695365468013614 is worse than 50.0-th percentile (3.142197772628294) across comparable trials..
[INFO 09-05 18:08:21] ax.api.client: Trial 79 should be stopped early: Trial objective value 3.1695365468013614 is worse than 50.0-th percentile (3.142197772628294) across comparable trials.
[INFO 09-05 18:08:21] ax.api.client: Trial 79 marked EARLY_STOPPED.
[INFO 09-05 18:08:21] ax.early_stopping.strategies.percentile: Early stoppinging trial 80: Trial objective value 2.9778508580028253 is worse than 50.0-th percentile (2.858118673202535) across comparable trials..
[INFO 09-05 18:08:21] ax.api.client: Trial 80 should be stopped early: Trial objective value 2.9778508580028253 is worse than 50.0-th percentile (2.858118673202535) across comparable trials.
[INFO 09-05 18:08:21] ax.api.client: Trial 80 marked EARLY_STOPPED.
[INFO 09-05 18:08:28] ax.api.client: Generated new trial 81 with parameters {'x1': 0.0, 'x2': 0.709448, 'x3': 0.186674, 'x4': 0.148889, 'x5': 0.501802, 'x6': 0.506896} using GenerationNode MBM.
[INFO 09-05 18:08:28] ax.api.client: Generated new trial 82 with parameters {'x1': 0.708182, 'x2': 0.414543, 'x3': 0.283681, 'x4': 0.377376, 'x5': 0.0, 'x6': 0.865415} using GenerationNode MBM.
[INFO 09-05 18:08:28] ax.api.client: Generated new trial 83 with parameters {'x1': 0.0, 'x2': 0.542609, 'x3': 0.0, 'x4': 0.608756, 'x5': 0.588857, 'x6': 0.806187} using GenerationNode MBM.
[INFO 09-05 18:08:28] ax.early_stopping.strategies.percentile: Early stoppinging trial 81: Trial objective value 2.639719559049041 is worse than 50.0-th percentile (2.6054762934582634) across comparable trials..
[INFO 09-05 18:08:28] ax.api.client: Trial 81 should be stopped early: Trial objective value 2.639719559049041 is worse than 50.0-th percentile (2.6054762934582634) across comparable trials.
[INFO 09-05 18:08:28] ax.api.client: Trial 81 marked EARLY_STOPPED.
[INFO 09-05 18:08:29] ax.early_stopping.strategies.percentile: Early stoppinging trial 82: Trial objective value 2.889851206238928 is worse than 50.0-th percentile (2.858118673202535) across comparable trials..
[INFO 09-05 18:08:29] ax.api.client: Trial 82 should be stopped early: Trial objective value 2.889851206238928 is worse than 50.0-th percentile (2.858118673202535) across comparable trials.
[INFO 09-05 18:08:29] ax.api.client: Trial 82 marked EARLY_STOPPED.
[INFO 09-05 18:08:29] ax.early_stopping.strategies.percentile: Early stoppinging trial 83: Trial objective value 2.96671352938702 is worse than 50.0-th percentile (2.888033685532198) across comparable trials..
[INFO 09-05 18:08:29] ax.api.client: Trial 83 should be stopped early: Trial objective value 2.96671352938702 is worse than 50.0-th percentile (2.888033685532198) across comparable trials.
[INFO 09-05 18:08:29] ax.api.client: Trial 83 marked EARLY_STOPPED.
[INFO 09-05 18:08:36] ax.api.client: Generated new trial 84 with parameters {'x1': 0.078017, 'x2': 0.682707, 'x3': 0.389267, 'x4': 0.123871, 'x5': 0.183357, 'x6': 0.721999} using GenerationNode MBM.
[INFO 09-05 18:08:36] ax.api.client: Generated new trial 85 with parameters {'x1': 0.695375, 'x2': 0.494708, 'x3': 0.372524, 'x4': 0.252494, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 09-05 18:08:36] ax.api.client: Generated new trial 86 with parameters {'x1': 0.0, 'x2': 0.83933, 'x3': 0.107457, 'x4': 0.227719, 'x5': 0.616622, 'x6': 0.521353} using GenerationNode MBM.
[INFO 09-05 18:08:48] ax.api.client: Trial 84 marked COMPLETED.
[INFO 09-05 18:08:49] ax.early_stopping.strategies.percentile: Early stoppinging trial 85: Trial objective value 2.9430704820288347 is worse than 50.0-th percentile (2.888033685532198) across comparable trials..
[INFO 09-05 18:08:49] ax.api.client: Trial 85 should be stopped early: Trial objective value 2.9430704820288347 is worse than 50.0-th percentile (2.888033685532198) across comparable trials.
[INFO 09-05 18:08:49] ax.api.client: Trial 85 marked EARLY_STOPPED.
[INFO 09-05 18:08:49] ax.early_stopping.strategies.percentile: Early stoppinging trial 86: Trial objective value 2.9849587783959812 is worse than 50.0-th percentile (2.8889424458855633) across comparable trials..
[INFO 09-05 18:08:49] ax.api.client: Trial 86 should be stopped early: Trial objective value 2.9849587783959812 is worse than 50.0-th percentile (2.8889424458855633) across comparable trials.
[INFO 09-05 18:08:49] ax.api.client: Trial 86 marked EARLY_STOPPED.`
}
</CellOutput>

## Step 6: Analyze Results

After running trials, you can analyze the results. Most commonly this means extracting
the parameterization from the best performing trial you conducted.

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.4185423114413097, 'x2': 0.5029296015821985, 'x3': 0.043220775486607306, 'x4': 0.0, 'x5': 0.2900601857485205, 'x6': 0.7542293644605413}
Prediction (mean, variance): {'hartmann6': (np.float64(-0.6017582498516068), np.float64(0.00011158186432944668))}`
}
</CellOutput>

## Step 7: Compute Analyses

Ax can also produce a number of analyses to help interpret the results of the experiment
via `client.compute_analyses`. Users can manually select which analyses to run, or can
allow Ax to select which would be most relevant. In this case Ax selects the following:

- **Arm Effects Plots** show the metric value for each
  [arm](https://ax.dev/docs/next/glossary#arm) on the experiment. Ax produces one plot
  using values from its internal surrogate model (this can be helpful for seeing the
  true effect of an arm when evaluations are noisy) and another using the raw metric
  values as observed.
- **Summary** lists all trials generated along with their parameterizations,
  observations, and miscellaneous metadata
- **Sensitivity Analysis Plot** shows which parameters have the largest affect on the
  objective using
  [Sobol Indicies](https://en.wikipedia.org/wiki/Variance-based_sensitivity_analysis)
- **Slice Plot** shows how the model predicts a single parameter effects the objective
  along with a confidence interval
- **Contour Plot** shows how the model predicts a pair of parameters effects the
  objective as a 2D surface
- **Cross Validation** helps to visualize how well the surrogate model is able to
  predict out of sample points

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/106bb68c-64f3-4869-9dfc-0fe4c28ec67a.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/1a12d764-bd41-4fe5-8b56-b578b0408b55.json')} />


**Summary for Experiment**

High-level summary of the `Trial`-s in this `Experiment`




|     | trial_index   | arm_name   | trial_status   | generation_node     | hartmann6   | x1       | x2       | x3       | x4       | x5       | x6       |
|:----|:--------------|:-----------|:---------------|:--------------------|:------------|:---------|:---------|:---------|:---------|:---------|:---------|
| 0   | 0             | 0_0        | COMPLETED      | CenterOfSearchSpace | -0.505315   | 0.500000 | 0.500000 | 0.500000 | 0.500000 | 0.500000 | 0.500000 |
| 1   | 1             | 1_0        | COMPLETED      | Sobol               | -0.239031   | 0.609462 | 0.544246 | 0.682442 | 0.636599 | 0.555102 | 0.318981 |
| 2   | 2             | 2_0        | COMPLETED      | Sobol               | -0.540887   | 0.074393 | 0.267562 | 0.090851 | 0.148223 | 0.033599 | 0.598113 |
| 3   | 3             | 3_0        | COMPLETED      | Sobol               | -0.084623   | 0.343109 | 0.872151 | 0.883883 | 0.874278 | 0.355764 | 0.981265 |
| 4   | 4             | 4_0        | COMPLETED      | Sobol               | -0.001587   | 0.847058 | 0.064087 | 0.358205 | 0.347065 | 0.865503 | 0.201193 |
| ... | ...           | ...        | ...            | ...                 | ...         | ...      | ...      | ...      | ...      | ...      | ...      |
| 82  | 82            | 82_0       | EARLY_STOPPED  | MBM                 | 2.889851    | 0.708182 | 0.414543 | 0.283681 | 0.377376 | 0.000000 | 0.865415 |
| 83  | 83            | 83_0       | EARLY_STOPPED  | MBM                 | 2.966714    | 0.000000 | 0.542609 | 0.000000 | 0.608756 | 0.588857 | 0.806187 |
| 84  | 84            | 84_0       | COMPLETED      | MBM                 | -0.704162   | 0.078017 | 0.682707 | 0.389267 | 0.123871 | 0.183357 | 0.721999 |
| 85  | 85            | 85_0       | EARLY_STOPPED  | MBM                 | 2.943070    | 0.695375 | 0.494708 | 0.372524 | 0.252494 | 0.000000 | 1.000000 |
| 86  | 86            | 86_0       | EARLY_STOPPED  | MBM                 | 2.984959    | 0.000000 | 0.839330 | 0.107457 | 0.227719 | 0.616622 | 0.521353 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/2845854d-bac5-4c1c-b88e-41475f052fb3.json')} />


**x3, x6 vs. hartmann6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their status_quo
value (or mean value if status_quo is unavailable). This plot helps in identifying
regions of optimal performance and understanding how changes in the selected parameters
influence the predicted outcomes. Contour lines represent levels of constant predicted
values, providing insights into the gradient and potential optima within the parameter
space.



<PlotlyFigure data={require('./assets/plot_data/b35ce874-44eb-43bd-8890-fbd455fa7361.json')} />


**x3, x4 vs. hartmann6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their status_quo
value (or mean value if status_quo is unavailable). This plot helps in identifying
regions of optimal performance and understanding how changes in the selected parameters
influence the predicted outcomes. Contour lines represent levels of constant predicted
values, providing insights into the gradient and potential optima within the parameter
space.



<PlotlyFigure data={require('./assets/plot_data/6c29640b-3deb-411b-800b-684c4a3d54e1.json')} />


**x3, x5 vs. hartmann6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their status_quo
value (or mean value if status_quo is unavailable). This plot helps in identifying
regions of optimal performance and understanding how changes in the selected parameters
influence the predicted outcomes. Contour lines represent levels of constant predicted
values, providing insights into the gradient and potential optima within the parameter
space.



<PlotlyFigure data={require('./assets/plot_data/1d6bb92b-9d5d-4702-b577-4e7047e8ebf5.json')} />


**Cross Validation for hartmann6**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/93b167d7-0cf0-416c-9598-0bbc95dc76b3.json')} />

## Conclusion

This tutorial demonstates Ax's early stopping capabilities, which utilize
timeseries-like data to monitor the results of expensive evaluations and terminate those
that are unlikely to produce promising results, freeing up resources to explore more
configurations. This can be used in a number of applications, and is especially useful
in machine learning contexts.

